--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -1,169 +1,74 @@
-/* CABEÇALHO: */
-.cabecalho__container {
+/* Aula 1 */
+.cabecalho {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    top: 0%;
 }
 
-/* .logo__item {
-    margin-right: 200px;
-} 
 
-.cabecalho__pesquisar__item {
-    margin-right: 200px;
-} Tudo isso aqui é resolvido com flexbox --> justify-content: space-between;*/
 
-.cabecalho__pesquisar__item {
-    display: none;
-}
 
-/* MENU: */
-.menu__container {
-    position: fixed;
-    bottom: 0%;
-    height: 74px;
-    width: 100%;
-}
 
-.menu__lista {
-    display: flex;
-    justify-content: space-around;
-    height: 100%;
-}
 
-.menu__lista li {
-    align-self: center;     /* alinha os elementos fora do eixo principal, de cima para baixo, nesse caso, alinhando os ícones e o texto com o centro do menu (ou seja, em cada item do menu) */
-}
-
-.menu__itens {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-
-.menu__lista:nth-child(2),
-.menu__lista:nth-child(3),
-.menu__lista:nth-child(4) {
-    display: none;
-}
-
-/* SEÇÃO SUPERIOR: */
-.superior__secao__container {
-    display: flex;
-    align-items: center;    /* alinha itens FORA do eixo principal */
-    white-space: nowrap;
-    overflow: scroll;
-    gap: 15px;
-}
-
-/* .superior__item {
-    margin-right: 15px;
-}
-
-.superior__item:last-child {
-    margin-right: 0px;
-} Tudo isso aqui pode ser resolvido com a propriedade gap do flexbox*/
-
-/* VIDEOS: */
+/* SEÇÃO VÍDEOS */
 
 .videos__container {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    z-index: 1;
+    padding: 153px 20px 10px 20px;
 }
 
 .videos__item {
-    height: 303px;
-    width: 280px;
     flex-grow: 1;
+    height: 303px;
+    width: 300px;
 }
 
-/* RODAPÉ: */
-.rodape__container {
-    display: flex;
-    flex-flow: column wrap;    
-    /* flex-direction: column;
-    flex-wrap: wrap; */
+/* grid vídeos */
+
+.descricao-video {
+    margin-top: 1rem;
+    display: grid;
+    text-align: start;
+    column-gap: 1rem;
+    row-gap: 10px;
+    grid-template-columns: auto 1fr;
 }
 
-/* TABLET: */
-@media screen and (min-width: 834px) {
+.descricao-video img {
+    grid-area: 1 / 1 / 3 / 2;
+}
 
-    /* CABEÇALHO: */
+.descricao-video h3 {
+    grid-area: 1 / 2 / 2 / 3;
+    font-weight: 700;
+    color: #444444;
+}
 
-    .cabecalho__pesquisar__item {
-        display: block;
-    }
+.descricao-video p {
+    grid-area: 2 / 2 / 3 / 3;
+    font-size: 14px;
+    color: #444444;
+}
 
-    /* MENU: */
+.descricao-video img {
+    width: 2em;
+    height: 2em;
+    border-radius: 100%;
+}
 
-    .menu__container {
-        left: 0;
-        height: auto;
-        width: 74px;
-        top: 80px;
-    }
+@media(min-width: 834px) {
 
-    .menu__lista {
-        flex-direction: column;
-        justify-content: flex-start;
-        padding-top: 15px;
-        gap: 33px;
-    }
-
-    /* RODAPÉ: */
-
-    .rodape__container {
-        justify-content: space-between;
+    .videos__container {
+        padding-left: 10%;
+        padding-right: 10%;
     }
 }
 
-/* DESKTOP: */
-@media screen and (min-width: 1440px) {
-    /* MENU: */
-
-    .menu__container {
-        width: 239px;
-        overflow: scroll;
-    }
-
-    .menu__lista:nth-child(2),
-    .menu__lista:nth-child(3),
-    .menu__lista:nth-child(4) {
-        display: flex;
-    }
-
-    .menu__lista {
-        height: auto;
-        padding: 20px 17px 20px 15px;
-        gap: 15px;
-    }
-
-    .menu__itens {
-        flex-direction: row;
-        gap: 15px;
-        align-items: center;
-    }
-
-    .menu__lista:nth-child(3) {
-        flex-direction: column-reverse;
-    }
-
-    .jogos {
-        order: 3;
-    }
-
-    .filmes {
-        order: 2;
-    }
-
-    .premium {
-        order: 1;
-    }
-
-    .maispagina {
-        order: 4;
+@media(min-width: 1440px) {
+    .videos__item {
+        width: 288px;
     }
 }
